Grouping with sorting sample added & stream to find first non null added